# SlashGaming-Diablo-II-API

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  LICENSE.md
SlashGaming-Diablo-II-API/include/: d2api_version.h  default_game_library.h  default_game_library.hpp  dllexport_define.inc  dllexport_undefine.inc  game_address.h  game_address.hpp  game_address_locator.h  game_address_locator.hpp  game_bool.h  game_bool.hpp  game_constant.h  game_constant.hpp  game_data.h  game_data.hpp  game_func.h  game_func.hpp  game_library.h  game_patch.h  game_patch.hpp  game_struct.h  game_struct.hpp  game_version.h  game_version.hpp  sgd2mapi.h  sgd2mapi.hpp
SlashGaming-Diablo-II-API/include/c/: default_game_library.h  game_address.h  game_bool.h  game_branch_type.h  game_constant.h  game_data.h  game_func.h  game_patch.h  game_struct.h  game_undefined.h  game_version.h
SlashGaming-Diablo-II-API/include/c/game_address/: game_decorated_name.h  game_offset.h  game_ordinal.h
SlashGaming-Diablo-II-API/include/c/game_constant/: d2_client_game_type.h  d2_difficulty.h  d2_difficulty_level.h  d2_draw_effect.h  d2_text_color.h  d2_text_font.h  d2_video_mode.h
SlashGaming-Diablo-II-API/include/c/game_data/: bnclient_data.h  d2client_data.h  d2cmp_data.h  d2common_data.h  d2ddraw_data.h  d2direct3d_data.h  d2game_data.h  d2gdi_data.h  d2gfx_data.h  d2glide_data.h  (+9 more)
SlashGaming-Diablo-II-API/include/cxx/: default_game_library.hpp  file.hpp  game_address.hpp  game_address_locator.hpp  game_bool.hpp  game_branch_type.hpp  game_constant.hpp  game_data.hpp  game_executable.hpp  game_func.hpp  game_function.hpp  game_patch.hpp  game_struct.hpp  game_undefined.hpp  game_variable.hpp  game_version.hpp  helper.hpp
SlashGaming-Diablo-II-API/include/game_address_locator/: game_address_locator_interface.h  game_address_locator_interface.hpp  game_decorated_name.h  game_decorated_name.hpp  game_offset.h  game_offset.hpp  game_ordinal.h  game_ordinal.hpp
SlashGaming-Diablo-II-API/include/game_patch/: game_branch_patch.h  game_branch_patch.hpp  game_branch_patch_interface.h  game_buffer_patch.h  game_buffer_patch.hpp  game_buffer_patch_interface.h  game_nop_patch.h  game_nop_patch.hpp  game_nop_patch_interface.h  game_patch_base.h  game_patch_base.hpp  game_patch_interface.h  game_patch_interface.hpp
SlashGaming-Diablo-II-API/resource/: resource.rc
SlashGaming-Diablo-II-API/src/: architecture_opcode.h  architecture_opcode.hpp  asm_x86_macro.h  config_parser.cc  config_parser.h  config_parser.hpp  crasher.c  crasher.cc  default_game_library.cc  dll_main.cc  game_address.cc  game_address_table.cc  game_address_table.h  game_address_table.hpp  game_address_table_reader.cc  game_address_table_reader.h  game_address_table_reader.hpp  game_library.cc  game_library.h  game_library.hpp  game_library_table.cc  game_library_table.h  game_version.cc  wide_macro.h
SlashGaming-Diablo-II-API/src/c/: c_default_game_library.cc  c_game_address.cc  c_game_patch.cc  c_game_version.cc  game_address.h
SlashGaming-Diablo-II-API/src/cxx/: architecture_opcode.cc  architecture_opcode.hpp  config.cc  config.hpp  config_parser.cc  config_parser.hpp  default_game_library.cc  game_address.cc  game_address_table.cc  game_address_table.hpp  game_address_table_reader.cc  game_address_table_reader.hpp  game_executable.cc  game_library.cc  game_library.hpp  game_patch.cc  game_version.cc
SlashGaming-Diablo-II-API/src/game_address_locator/: game_address_locator_interface.cc  game_decorated_name.cc  game_offset.cc  game_ordinal.cc
SlashGaming-Diablo-II-API/src/game_patch/: game_branch_patch.cc  game_branch_patch_interface.cc  game_buffer_patch.cc  game_nop_patch.cc  game_patch_base.cc  game_patch_interface.cc
include/: game_address.h  game_address_locator.h  game_func.h  game_library.h  game_patch.h  game_version.h  sgd2mapi.h
include/game_address_locator/: game_address_locator_interface.h  game_decorated_name.h  game_offset.h  game_ordinal.h
include/game_patch/: game_branch_patch.h  game_buffer_patch.h  game_interception_patch.h  game_nop_patch.h  game_patch_base.h
src/: GameLibrary.hpp  SGD2MAPI.h  Version.cpp  Version.hpp  architecture_opcode.h  config_parser.cc  config_parser.h  game_address.cc  game_address.h  game_address_table.cc  game_address_table.h  game_address_table_reader.cc  game_address_table_reader.h  game_library.cc  game_library.h  game_library_table.cc  game_library_table.h  game_patch.h  game_version.cc  game_version.h
src/Common/: Common.h  ErrorReport.cpp  ErrorReport.h  StringConversion.cpp  StringConversion.h  Types.h
src/Diablo II/: Constants.h  GameLibrary.cpp  GameLibrary.h  Offset.cpp  Offset.h  Ordinal.cpp  Ordinal.h  Patches.h  Pointer.cpp  Pointer.h  Pointers.h  Structs.h  Version.cpp  Version.h
src/Diablo II/Constant/: D2Act.h  D2BaseConstant.cpp  D2BaseConstant.h  D2CharacterClass.h  D2Difficulty.h  D2FillAlpha.h  D2TextColor.h  D2TextFont.h
src/Diablo II/Patch/: BasePatch.cpp  BasePatch.h  BufferPatch.cpp  BufferPatch.h  InterceptionPatch.cpp  InterceptionPatch.h
src/Diablo II/Pointer/: D2ClientFunc.cpp  D2ClientFunc.h  D2ClientVar.cpp  D2ClientVar.h  D2Direct3DFunc.h  D2GDIFunc.h  D2GFXFunc.cpp  D2GFXFunc.h  D2GameFunc.h  D2GlideFunc.h  D2MCPClientFunc.h  D2WinFunc.h  FogFunc.h
src/Diablo II/Struct/: D2UnitAny.h
src/c/: game_address.h
src/c_interface/: game_address.h
src/game_address_locator/: game_address_locator_interface.cc  game_address_locator_interface.h  game_decorated_name.cc  game_offset.cc  game_offset.h  game_ordinal.cc  game_ordinal.h
src/game_address_locator/c/: game_address_locator_interface.h
src/game_address_locator/c_interface/: game_address_locator_interface.h  game_offset.h  game_ordinal.h
src/game_patch/: game_branch_patch.cc  game_buffer_patch.cc  game_buffer_patch.h  game_interception_patch.cc  game_nop_patch.cc  game_patch_base.cc  game_patch_base.h
src/game_patch/c/: game_nop_patch.h  game_patch_base.h
src/game_patch/c_interface/: game_branch_patch.h  game_buffer_patch.h  game_interception_patch.h  game_nop_patch.h  game_patch_base.h
(+1139 files in other folders)
